<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:id="@+id/linearPager">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/ic_left_arrow"
            android:layout_gravity="center_vertical" />

        <android.support.v4.view.ViewPager
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cadastro_pager"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/ic_right_arrow"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nome"
                android:id="@+id/txtNome"
                android:textSize="17dp"
               />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:layout_weight="1"
                android:id="@+id/editNomeContainer"
                android:hint="@string/hint_nome_container"
                android:inputType="text"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/local"
                android:gravity="center"
                android:id="@+id/txtLocal"
                android:textSize="17dp"
                android:layout_below="@id/txtNome"
                android:layout_alignParentLeft="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="17dp"
                android:id="@+id/editLocalContainer"
                android:gravity="center|start"
                android:hint="@string/hint_local_container"
                android:inputType="text"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/ultimaLimpeza"
                style="@style/textView_custom"
                android:gravity="center"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:background="@android:color/transparent"
                    android:src="@mipmap/ic_calendar"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/imgBUltimaLimpCont"
                    android:gravity="center"
                    android:onClick="mostrarDatePicker"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/textViewData"
                    android:textAlignment="center"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:gravity="bottom">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonConcluir"
            android:text="@string/salvar"
            android:onClick="containerSalvar"
            style="@style/buttonTheme"
            />
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonCancelar"
            android:text="@string/buttonCancelar"
            android:onClick="containerCancelar"
            style="@style/buttonTheme"
            />

    </LinearLayout>

</LinearLayout>