<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.senac.cademeulivro.activity.obra.ObraDetalhadaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ImageViewCapaObra"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_weight="1.3"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/textView_custom"
                        android:text="@string/textViewTitulo"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/TextViewTituloObra"
                        style="@style/textView_custom"
                        />

                </LinearLayout>

                <LinearLayout  android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/textView_custom"
                        android:text="@string/textViewAutor"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/TextViewAutorObra"
                        style="@style/textView_custom"
                        />

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:text="@string/textViewIsbn"
                        android:layout_height="wrap_content"
                        style="@style/textView_custom"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/TextViewIsbnObra"
                        style="@style/textView_custom"
                        />


                </LinearLayout>

                <LinearLayout  android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/textView_custom"
                        android:text="@string/textViewAno"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/TextViewAnoObra"
                        style="@style/textView_custom"
                        />

                </LinearLayout>

                <LinearLayout  android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/textView_custom"
                        android:text="@string/textViewEditora"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/TextViewEditoraObra"
                        style="@style/textView_custom"
                        />

                </LinearLayout>

                <android.support.v7.widget.AppCompatCheckBox
                    android:clickable="false"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:text="@string/checkBoxEmprestado"
                    android:id="@+id/CheckBoxEmprestadoObra"
                    app:buttonTint="@color/colorPrimary"
                />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textView_custom"
                android:text="@string/textViewDescricao"
                android:layout_marginLeft="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewDescricaoObra"
                style="@style/textView_custom"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                >

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewContainer"
                    style="@style/textView_custom"
                    android:textAlignment="center"
                    />
                <TextView
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextViewConteinerObra"
                    style="@style/textView_custom"
                    />

            </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewTag"
                style="@style/textView_custom"
                android:layout_marginLeft="5dp"
                />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/layoutTagsDetalhada"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- input das tags como textview via codigo usando o
                    style = tag_style-->

                </LinearLayout>

            </HorizontalScrollView>


        </LinearLayout>


        <LinearLayout
            android:layout_weight="0.7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            >

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ButtonEditarObra"
                android:text="@string/buttonEditar"
                android:onClick="obraDetalhadaEditar"
                style="@style/buttonTheme"
                />

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/buttonVoltar"
                android:onClick="obraDetalhadaVoltar"
                style="@style/buttonTheme"
                />

        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>