<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tag_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.senac.cademeulivro.activity.tag.TagEditActivity">

    <LinearLayout
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            style="@style/textView_custom"
            android:text="@string/nome"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editNomeTag"
            style="@style/textView_custom"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Escolher uma cor para esta tag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="escolherCor"
        style="@style/buttonTheme"
        />

    <TextView
        android:gravity="center_vertical"
        style="@style/textView_custom"
        android:paddingLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/cor_escolhida"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/previewColor"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:id="@+id/space" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                style="@style/buttonTheme"
                android:onClick="concluirEditTag"
                android:text="@string/buttonConcluir"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                style="@style/buttonTheme"
                android:onClick="cancelarEditTag"
                android:text="@string/buttonCancelar"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
