<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.senac.cademeulivro.activity.container.ContainerEditActivity">

    <LinearLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/imageViewContEdit"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/nome"
                    style="@style/textView_custom"
                    android:gravity="center"
                    />

                <EditText
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/editNomeCont"
                    android:gravity="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/local"
                    style="@style/textView_custom"
                    android:gravity="center"
                    />

                <EditText
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/editLocalCont"
                    android:gravity="center"
                    />
            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/icone"
                    style="@style/textView_custom"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/textIconeContEdit"
                    />

            </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        >

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonConcluir"
            android:text="@string/salvar"
            android:onClick="containerSalvar"
            style="@style/buttonTheme"
            />
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonCancelar"
            android:text="@string/buttonCancelar"
            android:onClick="containerCancelar"
            style="@style/buttonTheme"
            />

    </LinearLayout>

</LinearLayout>


