<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:id="@+id/ImageViewCapaLista"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_weight="1.5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewTitulo"
                style="@style/textView_custom"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewTituloLista"
                android:textColor="@color/colorPrimaryDark"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewAutor"
                android:textStyle="bold"
                style="@style/textView_custom"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewAutorLista"
                android:textColor="@color/colorPrimaryDark"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewEditora"
                android:textStyle="bold"
                style="@style/textView_custom"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewEditoraLista"
                android:textColor="@color/colorPrimaryDark"
                />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>